<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_right_left_spacing"
                    android:layout_marginRight="@dimen/button_right_left_spacing"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:context=".MainActivity">

                    <TextView
                        style="@style/team_name_style"
                        android:text="@string/team_horde" />

                    <TextView
                        android:id="@+id/team_horde_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/score_display"
                        android:textColor="@color/team_score_color"
                        android:textSize="@dimen/score_text_size" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/horde_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/arathi_basin" />

                        <Button
                            style="@style/horde_buttons"
                            android:text="@string/eye_of_the_storm" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/horde_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/battle_for_gilneas" />

                        <Button
                            style="@style/horde_buttons"
                            android:text="@string/deepwind_gorge" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/horde_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/silvershard_mines" />

                        <Button
                            style="@style/horde_buttons"
                            android:text="@string/temple_of_kotmogu" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/horde_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/warsong_gulch" />

                        <Button
                            style="@style/horde_buttons"
                            android:text="@string/twin_peaks" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/horde_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/alterac_valley" />

                        <Button
                            style="@style/horde_buttons"
                            android:text="@string/strands_of_the_ancients" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/horde_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/isle_of_conquest" />

                        <Button
                            style="@style/horde_buttons"
                            android:text="@string/wintergrasp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/horde_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/tol_brad" />

                        <Button
                            style="@style/horde_buttons"
                            android:text="@string/ashran" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dividing_line" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_right_left_spacing"
                    android:layout_marginRight="@dimen/button_right_left_spacing"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:context=".MainActivity">

                    <TextView
                        style="@style/team_name_style"
                        android:text="@string/team_alliance" />

                    <TextView
                        android:id="@+id/team_alliance_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/score_display"
                        android:textColor="@color/team_score_color"
                        android:textSize="@dimen/score_text_size" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/alliance_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/arathi_basin" />

                        <Button
                            style="@style/alliance_buttons"
                            android:text="@string/eye_of_the_storm" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/alliance_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/battle_for_gilneas" />

                        <Button
                            style="@style/alliance_buttons"
                            android:text="@string/deepwind_gorge" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/alliance_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/silvershard_mines" />

                        <Button
                            style="@style/alliance_buttons"
                            android:text="@string/temple_of_kotmogu" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/alliance_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/warsong_gulch" />

                        <Button
                            style="@style/alliance_buttons"
                            android:text="@string/twin_peaks" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/alliance_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/alterac_valley" />

                        <Button
                            style="@style/alliance_buttons"
                            android:text="@string/strands_of_the_ancients" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/alliance_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/isle_of_conquest" />

                        <Button
                            style="@style/alliance_buttons"
                            android:text="@string/wintergrasp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/alliance_buttons"
                            android:layout_marginEnd="@dimen/button_spacing"
                            android:layout_marginRight="@dimen/button_spacing"
                            android:text="@string/tol_brad" />

                        <Button
                            style="@style/alliance_buttons"
                            android:text="@string/ashran" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/image_bottom_margin"
                android:src="@drawable/warcraft"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/reset_button"
            android:onClick="resetAllianceAndHordeScore"
            android:text="@string/reset_button" />

    </RelativeLayout>
</ScrollView>